--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                      <div class="center-desk">
                         <div class="logo">
                            <a href="index.html">
-                              <h1>PRUEBA dos tresdos <strong class="green">ANDROID</strong></h1>
+                              <h1>PRUEBA tres <strong class="green">ANDROID</strong></h1>
                            </a>
                            <h2>ÚLTIMA ACTIVIDAD</h2>
                         </div>
